--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
-    scroll-behavior: smooth; /* Enables smooth scrolling */
+    scroll-behavior: smooth;
 }
 
 body {
@@ -88,21 +88,18 @@ header nav ul li a.active {
     margin-bottom: 2rem;
 }
 
-.hero button {
-    background-color: var(--primary-color);
+.shop-now-btn {
     color: var(--background-color);
-    padding: 0.8rem 1.5rem;
-    border: none;
-    font-size: 1rem;
-    font-weight: bold;
+    background-color: var(--primary-color);
+    padding: 10px 20px;
     border-radius: 5px;
-    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
     transition: background-color 0.3s;
 }
 
-.hero button:hover {
+.shop-now-btn:hover {
     background-color: var(--secondary-color);
-    color: var(--background-color);
 }
 
 /* Products Section */
@@ -129,11 +126,12 @@ header nav ul li a.active {
     border: 1px solid var(--primary-dark);
     padding: 1rem;
     width: calc(33.333% - 2rem);
-    background-color: #2c2c2c; /* Dark gray to contrast with the background */
+    background-color: #2c2c2c;
     color: var(--text-color-light);
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
+    border-radius: 5px;
 }
 
 .product-card img {
